load-tests/online_shop/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    metadata:
      labels:
        logs: "true"
        load: "true"
        service: "true"
    spec:
      containers:
      - name: "online-shop-deployment"
        imagePullPolicy: Always
