load-tests/online_shop/deployment/oracledb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracledb-deployment
spec:
  selector:
    matchLabels:
      app: oracledb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oracledb
        logs: "true"
    spec:
      containers:
        - name: oracledb
          image: niveathika/oracle-enterprise:12.2.0.1-slim
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sleep 60s; source /home/oracle/.bashrc; sqlplus / as sysdba <<< startup; sqlplus / as sysdba <<< @/home/oracle/sql-scripts/init.sql"]
          ports:
            - containerPort: 1521
          volumeMounts:
            - name: data
              mountPath: /var/lib/oracledb
            - name: configdbora-script
              mountPath: /home/oracle/setup/configDBora.sh
              subPath: configDBora.sh
            - name: init-script
              mountPath: /home/oracle/sql-scripts/init.sql
              subPath: init.sql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: oracledb-data-pvc
        - name: configdbora-script
          persistentVolumeClaim:
            claimName: configdbora-script-pvc
        - name: init-script
          persistentVolumeClaim:
            claimName: init-script-pvc
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: oracledb-service
  labels:
    app: oracledb-server
spec:
  type: NodePort
  ports:
    - port: 1521
      targetPort: 1521
      protocol: TCP
  selector:
    app: oracledb
---
apiVersion: v1
kind: Service
metadata:
  name: oracledb-deployment
spec:
  selector:
    app: oracledb
  ports:
    - protocol: TCP
      port: 1521
      targetPort: 1521
  type: LoadBalancer
---
